// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders in desktop mode 1`] = `
<div>
  <header
    class="c-HeaderTopBar"
    data-testid="top-bar"
    role="banner"
  >
    <div
      class="c-HeaderTopBar__Item c-HeaderTopBar__Logo"
    />
    <ul
      class="c-HeaderTopBar__List"
    >
      <div
        class="c-HeaderTopBar__Item"
      >
        <div
          class="c-HeaderLinkSelector"
        >
          <span>
            Montauban
          </span>
          <img
            alt="Changer de ville"
            aria-label="Changer de ville"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/images/pictos/button_refresh_arrows.svg"
            style="color: transparent;"
            width="24"
          />
        </div>
      </div>
      <div
        aria-hidden="true"
        class="c-HeaderTopBar__Filler"
      />
      <div
        class="c-HeaderTopBar__Item"
      >
        <div
          class="c-HeaderTopBar__SearchBar"
        >
          <div
            class="c-HeaderLinkSearch"
          >
            <input
              aria-label="Rechercher sur le site"
              class="c-HeaderLinkSearch__Input"
              placeholder="Rechercher sur le site"
              role="search"
              type="text"
            />
            <button
              class="c-HeaderLinkSearch__Button"
            >
              <img
                alt="Lancer la recherche"
                data-nimg="1"
                decoding="async"
                height="24"
                loading="lazy"
                src="/images/pictos/search.svg"
                style="color: transparent;"
                width="24"
              />
            </button>
          </div>
        </div>
      </div>
      <nav
        role="navigation"
      >
        <ul
          class="c-HeaderTopBar__Nav"
        >
          <div
            aria-hidden="true"
            class="c-HeaderTopBar__Separator"
          />
          <li
            class="c-HeaderTopBar__Item"
          >
            <a
              class="c-NavigationLink c-NavigationLink_desktop"
              href="/service/alertes"
            >
              <div
                class="c-NavigationLink__Box"
              >
                <div
                  class="c-NavigationLink__Picto"
                >
                  <img
                    alt="S'abonner aux alertes"
                    data-nimg="1"
                    decoding="async"
                    height="24"
                    loading="lazy"
                    src="/images/pictos/notify.svg"
                    style="color: transparent;"
                    width="24"
                  />
                </div>
              </div>
              <span
                class="c-NavigationLink__Label"
              />
            </a>
          </li>
          <div
            aria-hidden="true"
            class="c-HeaderTopBar__Separator"
          />
          <li
            class="c-HeaderTopBar__Item"
          >
            <a
              class="c-NavigationLink c-NavigationLink_desktop"
              href="/service/contact"
            >
              <div
                class="c-NavigationLink__Box"
              >
                <div
                  class="c-NavigationLink__Picto"
                >
                  <img
                    alt="Contactez-nous"
                    data-nimg="1"
                    decoding="async"
                    height="24"
                    loading="lazy"
                    src="/images/pictos/contact.svg"
                    style="color: transparent;"
                    width="24"
                  />
                </div>
              </div>
              <span
                class="c-NavigationLink__Label"
              />
            </a>
          </li>
          <div
            aria-hidden="true"
            class="c-HeaderTopBar__Separator"
          />
          <li
            class="c-HeaderTopBar__Item"
          >
            <div
              class="c-HeaderLinkProfile"
            >
              <div
                class="c-HeaderLinkProfile__Content"
              >
                <div
                  style="transform: scaleY(1); transition: transform 0.2s ease;"
                />
              </div>
              <div
                class="c-HeaderLinkProfile__PopUp "
              >
                <div
                  class="c-HeaderLinkProfile__PopUpHead"
                />
                <div
                  class="c-HeaderLinkProfile__PopUpContent"
                >
                  <span
                    class="c-HeaderLinkProfile__PopUpTitle"
                  >
                    Mon profil :
                  </span>
                  <form
                    class="c-HeaderLinkProfile__PopUpForm"
                  >
                    <div
                      class="c-FormSelect"
                    >
                      <div
                        class="c-FormLabel"
                      >
                        <label
                          class="c-FormLabel__LabelWrapper"
                          for="audience"
                        >
                          <span
                            class="c-FormLabel__Label"
                          >
                            Profil *
                          </span>
                        </label>
                      </div>
                      <div
                        class="o-SelectWrapper"
                      >
                        <select
                          aria-errormessage="audience_error"
                          aria-invalid="false"
                          class="o-SelectWrapper__Select o-SelectWrapper__Select_placeholder"
                          data-testid="form-select"
                          id="audience"
                        >
                          <option
                            disabled=""
                            hidden=""
                            value="-1"
                          >
                            - Sélectionnez un élément -
                          </option>
                        </select>
                      </div>
                    </div>
                    <div
                      class="c-HeaderLinkProfile__PopUpButton"
                    >
                      <button
                        class="c-CommonButton c-CommonButton_primary c-CommonButton_fontLarge c-CommonButton_paddingLarge c-CommonButton_fullWidth"
                        type="submit"
                      >
                        Modifier mon profil
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </li>
          <div
            aria-hidden="true"
            class="c-HeaderTopBar__Separator"
          />
          <li
            class="c-HeaderTopBar__Item"
          >
            <a
              class="c-HeaderLinkUser"
              href="/connexion"
            >
              <div
                class="c-HeaderLinkUser__Circle"
              >
                <img
                  alt="Mon compte"
                  aria-label="Mon compte"
                  data-nimg="1"
                  decoding="async"
                  height="24"
                  loading="lazy"
                  src="/images/pictos/avatar.svg"
                  style="color: transparent;"
                  width="20"
                />
              </div>
            </a>
          </li>
        </ul>
      </nav>
    </ul>
  </header>
  <nav
    class="c-HeaderSideBar"
    data-testid="side-bar"
    role="navigation"
  >
    <a
      class="c-MSDLogo"
      href="https://www.monservicedechets.com/"
    >
      <img
        alt="Allez sur le site de Suez"
        aria-label="Mon service déchets Suez, allez sur le site de Suez"
        data-nimg="1"
        decoding="async"
        height="30"
        loading="lazy"
        src="/images/logo_msd.svg"
        style="color: transparent;"
        width="141"
      />
    </a>
  </nav>
  <div
    aria-hidden="true"
    class="c-Header__ContentCover"
    data-testid="content-cover"
  />
</div>
`;

exports[`Header renders in mobile mode 1`] = `
<div>
  <header
    class="c-HeaderTopBar"
    data-testid="top-bar"
    role="banner"
  >
    <button
      aria-expanded="false"
      class="c-HeaderTopBar__BurgerButton"
      data-testid="burger-menu-button"
      type="button"
    />
    <div
      class="c-HeaderTopBar__Item c-HeaderTopBar__Logo"
    />
    <ul
      class="c-HeaderTopBar__List"
    >
      <li
        class="c-HeaderTopBar__Item c-HeaderTopBar__User"
      >
        <a
          class="c-HeaderLinkUser"
          href="/connexion"
        >
          <div
            class="c-HeaderLinkUser__Circle"
          >
            <img
              alt="Mon compte"
              aria-label="Mon compte"
              data-nimg="1"
              decoding="async"
              height="24"
              loading="lazy"
              src="/images/pictos/avatar.svg"
              style="color: transparent;"
              width="20"
            />
          </div>
        </a>
      </li>
      <li
        class="c-HeaderTopBar__Item c-HeaderTopBar__Search"
      >
        <a
          class="c-NavigationLink c-NavigationLink_desktop"
          href="/"
        >
          <div
            class="c-NavigationLink__Box"
          >
            <div
              class="c-NavigationLink__Picto"
            >
              <img
                alt="Afficher la recherche"
                data-nimg="1"
                decoding="async"
                height="24"
                loading="lazy"
                src="/images/pictos/search.svg"
                style="color: transparent;"
                width="24"
              />
            </div>
          </div>
          <span
            class="c-NavigationLink__Label"
          />
        </a>
      </li>
    </ul>
  </header>
  <nav
    class="c-HeaderBurgerMenu"
    data-testid="burger-menu"
  >
    <ul
      class="c-HeaderBurgerMenu__List"
    >
      <li
        class="c-HeaderBurgerMenu__Item"
      >
        <h2>
          Ma commune
        </h2>
        <div
          class="c-HeaderLinkSelector"
        >
          <span>
            Montauban
          </span>
          <img
            alt="Changer de ville"
            aria-label="Changer de ville"
            data-nimg="1"
            decoding="async"
            height="24"
            loading="lazy"
            src="/images/pictos/button_refresh_arrows.svg"
            style="color: transparent;"
            width="24"
          />
        </div>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item"
      >
        <div
          class="c-HeaderBurgerMenu__User"
        >
          <span>
            Je suis
          </span>
          <div
            class="c-HeaderLinkProfile"
          >
            <div
              class="c-HeaderLinkProfile__Content"
            >
              <div
                style="transform: scaleY(1); transition: transform 0.2s ease;"
              />
            </div>
            <div
              class="c-HeaderLinkProfile__PopUp "
            >
              <div
                class="c-HeaderLinkProfile__PopUpHead"
              />
              <div
                class="c-HeaderLinkProfile__PopUpContent"
              >
                <span
                  class="c-HeaderLinkProfile__PopUpTitle"
                >
                  Mon profil :
                </span>
                <form
                  class="c-HeaderLinkProfile__PopUpForm"
                >
                  <div
                    class="c-FormSelect"
                  >
                    <div
                      class="c-FormLabel"
                    >
                      <label
                        class="c-FormLabel__LabelWrapper"
                        for="audience"
                      >
                        <span
                          class="c-FormLabel__Label"
                        >
                          Profil *
                        </span>
                      </label>
                    </div>
                    <div
                      class="o-SelectWrapper"
                    >
                      <select
                        aria-errormessage="audience_error"
                        aria-invalid="false"
                        class="o-SelectWrapper__Select o-SelectWrapper__Select_placeholder"
                        data-testid="form-select"
                        id="audience"
                      >
                        <option
                          disabled=""
                          hidden=""
                          value="-1"
                        >
                          - Sélectionnez un élément -
                        </option>
                      </select>
                    </div>
                  </div>
                  <div
                    class="c-HeaderLinkProfile__PopUpButton"
                  >
                    <button
                      class="c-CommonButton c-CommonButton_primary c-CommonButton_fontLarge c-CommonButton_paddingLarge c-CommonButton_fullWidth"
                      type="submit"
                    >
                      Modifier mon profil
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item c-HeaderBurgerMenu__Item_grow"
      >
        <nav
          class="c-HeaderBurgerMenu__Container"
          role="navigation"
        >
          <h2>
            Mes services
          </h2>
        </nav>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item c-HeaderBurgerMenu__Item_grow"
      >
        <nav
          class="c-HeaderBurgerMenu__Container"
          role="navigation"
        >
          <a
            class="c-NavigationLink c-NavigationLink_mobile"
            href="/"
          >
            <div
              class="c-NavigationLink__Box"
            >
              <div
                class="c-NavigationLink__Picto"
              >
                <img
                  alt=""
                  data-nimg="1"
                  decoding="async"
                  height="24"
                  loading="lazy"
                  src="/images/pictos/localisation.svg"
                  style="color: transparent;"
                  width="24"
                />
              </div>
            </div>
            <span
              class="c-NavigationLink__Label"
            >
              Mon adresse
            </span>
          </a>
          <a
            class="c-NavigationLink c-NavigationLink_mobile"
            href="/"
          >
            <div
              class="c-NavigationLink__Box"
            >
              <div
                class="c-NavigationLink__Picto"
              >
                <img
                  alt=""
                  data-nimg="1"
                  decoding="async"
                  height="24"
                  loading="lazy"
                  src="/images/pictos/calendar.svg"
                  style="color: transparent;"
                  width="24"
                />
              </div>
            </div>
            <span
              class="c-NavigationLink__Label"
            >
              Calendrier
            </span>
          </a>
          <a
            class="c-NavigationLink c-NavigationLink_mobile"
            href="/"
          >
            <div
              class="c-NavigationLink__Box"
            >
              <div
                class="c-NavigationLink__Picto"
              >
                <img
                  alt=""
                  data-nimg="1"
                  decoding="async"
                  height="24"
                  loading="lazy"
                  src="/images/pictos/notify.svg"
                  style="color: transparent;"
                  width="24"
                />
              </div>
            </div>
            <span
              class="c-NavigationLink__Label"
            >
              Alertes
            </span>
          </a>
          <a
            class="c-NavigationLink c-NavigationLink_mobile"
            href="/"
          >
            <div
              class="c-NavigationLink__Box"
            >
              <div
                class="c-NavigationLink__Picto"
              >
                <img
                  alt=""
                  data-nimg="1"
                  decoding="async"
                  height="24"
                  loading="lazy"
                  src="/images/pictos/contact.svg"
                  style="color: transparent;"
                  width="24"
                />
              </div>
            </div>
            <span
              class="c-NavigationLink__Label"
            >
              Contact
            </span>
          </a>
        </nav>
      </li>
      <li
        class="c-HeaderBurgerMenu__Item"
      >
        <a
          class="c-MSDLogo"
          href="https://www.monservicedechets.com/"
        >
          <img
            alt="Allez sur le site de Suez"
            aria-label="Mon service déchets Suez, allez sur le site de Suez"
            data-nimg="1"
            decoding="async"
            height="30"
            loading="lazy"
            src="/images/logo_msd.svg"
            style="color: transparent;"
            width="141"
          />
        </a>
      </li>
    </ul>
  </nav>
  <div
    aria-hidden="true"
    class="c-Header__ContentCover"
    data-testid="content-cover"
  />
</div>
`;
